Detect devices for existing brands: Vivo, HTC, Hisense, Gionee, Huawei, Samsung, Realme, Blu, NOA (#6883)
* feat(device) detect brand Beelink model: GT King
feat(device) detect brand Sony model: Xperia 10 III (XQ-BT52), Xperia 8 (SOV42-u)
feat(device) detect brand Blackview model: BV9500 Plus
feat(device) detect brand Samsung model: Galaxy M21 (2021) (SM-M215G)
feat(device) detect brand NUU Mobile model: A5L (N5501L)
feat(device) detect brand Oukitel model: C18 Pro
feat(device) detect brand Coolpad model: Legacy S (cp3648AT)
feat(device) detect brand LG model: Q8+ (LM-Q815K)
feat(device) detect brand DEXP models: Ursus E170, Ursus E180
feat(device) detect brand Acer model: Enduro T1 (ET-108-11A)

feat(device) added test brand LG model: Q8+ (LM-Q815L)
feat(device) added test brand Archos model: 55 Helium
feat(device) added test brand Lenovo model: Tab M10 FHD (B-X605FC)
feat(device) added test brand Samsung model: Galaxy J8 (SM-J810G), Galaxy J5 (2017) (SM-J530K, SM-J530S),

* feat(device) detect new brand Rakuten models: Big S (3917JR), Hand (P710), C330 Mini (C330)
feat(device) detect brand ZTE model: Blade A7s (2020) (A7020RU)
feat(device) renamed model for ZTE Rakuten Big to Rakuten Big

feat(device) added test brand Huawei model: P8 Lite (2015) (ALE-L02)
feat(device) added test brand Sony model: Xperia XZ Premium (G8142)

* feat(device) detect brand Coolpad models: Modena (E501), Modena 2 (E502)
feat(device) detect brand TCL model: 10 SE (T766H_RU)
feat(device) detect brand ZTE models: Axon 10 Pro (A2020RU), Axon 20 5G (A2121E)
feat(device) detect brand Mobicel model: Clik Plus
feat(device) detect brand Oukitel model: WP12 Pro
feat(device) detect brand Contixo model: KT1100GT
feat(device) detect brand BQ model: Exion One (BQ-7055L)
feat(device) detect brand ONYX BOOX model: Kon Tiki 2
feat(device) detect brand Mecer model: M17QF6 3G
feat(device) detect brand Mecer model: M17QF6 3G

feat(device) added test brand Digma model: Vox 

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -97,7 +97,7 @@ HTC:
       model: 'U Ultra'
     - regex: 'HTC[_ ](?:U-2u|U Play|2PZM3)(?:[);/ ]|$)'
       model: 'U Play'
-    - regex: '(?:U11 plus|(?:HTC_)?2Q4D100)(?:[);/ ]|$)'
+    - regex: '(?:U11 plus|(?:HTC_)?2Q4D[12]00)(?:[);/ ]|$)'
       model: 'U11 Plus'
     - regex: 'HTC (?:U12\+|2Q55[13]00)(?:[);/ ]|$)'
       model: 'U12 Plus'
@@ -111,7 +111,7 @@ HTC:
       model: 'Evo 3G'
     - regex: 'PC36100(?:[);/ ]|$)'
       model: 'Evo 4G'
-    - regex: '(?:HTC[_ ])?(?:HTV33|601HT|2PZC100|2PZC5|U-3u)(?:[);/ ]|$)'
+    - regex: '(?:HTC[_ ])?(?:HTV33|601HT|2PZC100|2PZC5|U-3[uw])(?:[);/ ]|$)'
       model: 'U11'
     - regex: '(?:801e|802[wdt])'
       model: 'One'
@@ -1327,6 +1327,9 @@ Acer:
     # explicit tablet models
     - regex: 'A1-81[01]'
       model: 'Iconia A'
+      device: 'tablet'
+    - regex: 'ET-108-11A'
+      model: 'Enduro T1'
       device: 'tablet'
     - regex: 'ET-108-11A'
       model: 'Enduro T1'
@@ -3002,7 +3005,7 @@ Blu:
       model: 'Vivo One Plus (2019)'
     - regex: '(?:BLU[_ ])?Vivo (One|XL3|XI)(?: Plus|[+])'
       model: 'Vivo $1 Plus'
-    - regex: '(?:BLU[_ ])?Vivo (5R|XI|XL[42]|8L)'
+    - regex: '(?:BLU[_ ])?Vivo (5R|XI|XL[234]|8L)'
       model: 'Vivo $1'
     - regex: '(?:BLU[_ ])?VIVO GO'
       model: 'Vivo Go'
@@ -3195,7 +3198,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[479]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V206[156]|V205[08]|V2043_21|I1928|V2069|V21[12]1A)(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V2085A|V202[0345]C?A|V202[235-9]|V205[479]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V206[156]|V205[08]|V2043_21|V213[346]A|V214[13]A|I1928|V2069|V21[12]1A|V2106A|V2123A)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3234,10 +3237,18 @@ Vivo:
       model: 'iQOO U1x'
     - regex: 'V2061A(?:[);/ ]|$)'
       model: 'iQOO U3'
+    - regex: 'V2143A(?:[);/ ]|$)'
+      model: 'iQOO U3x'
+    - regex: 'V2106A(?:[);/ ]|$)'
+      model: 'iQOO U3x 5G'
     - regex: 'V2024A(?:[);/ ]|$)'
       model: 'iQOO 5'
     - regex: 'V2025A(?:[);/ ]|$)'
       model: 'iQOO 5 Pro'
+    - regex: 'V2136A(?:[);/ ]|$)'
+      model: 'iQOO 8'
+    - regex: 'V2141A(?:[);/ ]|$)'
+      model: 'iQOO 8 Pro'
     - regex: '(?:V2025)(?:[);/ ]|$)'
       model: 'V20'
     - regex: '(?:V2066)(?:[);/ ]|$)'
@@ -3266,7 +3277,7 @@ Vivo:
       model: 'Nex A'
     - regex: 'vivo NEX(?:[);/ ]|$)'
       model: 'Nex'
-    - regex: 'V1821[AT](?:[);/ ]|$)'
+    - regex: '(?:V1821[AT]|vivo 1813)(?:[);/ ]|$)'
       model: 'Nex Dual Display'
     - regex: 'Vivo ONE(?:[);/ ]|$)'
       model: 'One'
@@ -3324,7 +3335,7 @@ Vivo:
       model: 'V5s'
     - regex: 'vivo 1718(?:[);/ ]|$)'
       model: 'V7'
-    - regex: 'vivo 1716(?:[);/ ]|$)'
+    - regex: 'vivo (?:1716|1850)(?:[);/ ]|$)'
       model: 'V7 Plus'
     - regex: 'vivo 1723(?:[);/ ]|$)'
       model: 'V9'
@@ -3368,34 +3379,46 @@ Vivo:
       model: 'X50'
     - regex: 'vivo 2005(?:[);/ ]|$)'
       model: 'X50 5G'
+    - regex: 'vivo 1937(?:[);/ ]|$)'
+      model: 'X50 Lite'
     - regex: '(?:V2005A|vivo 2006)(?:[);/ ]|$)'
       model: 'X50 Pro'
     - regex: '(?:V2011A|X50 Pro\+)(?:[);/ ]|$)'
       model: 'X50 Pro Plus'
     - regex: 'V20(?:46|59)A(?:[);/ ]|$)'
       model: 'X60'
+    - regex: 'V2085A(?:[);/ ]|$)'
+      model: 'X60t'
     - regex: '(?:V2047A|V2046)(?:[);/ ]|$)'
       model: 'X60 Pro'
     - regex: 'V2056A(?:[);/ ]|$)'
       model: 'X60 Pro Plus'
-    - regex: 'X9Plus(?:[);/ ]|$)'
-      model: 'X9 Plus'
+    - regex: 'V2134A(?:[);/ ]|$)'
+      model: 'X70 Pro'
+    - regex: 'V2133A(?:[);/ ]|$)'
+      model: 'X70'
+    - regex: 'X([0-9])Plus(?: A)?(?:[);/ ]|$)'
+      model: 'X$1 Plus'
     - regex: 'vivo Xplay6(?:[);/ ]|$)'
       model: 'X Play 6'
-    - regex: 'vivo 2015(?:[);/ ]|$)'
+    - regex: 'vivo 2015(?:_21)?(?:[);/ ]|$)'
       model: 'Y1s'
     - regex: 'vivo 1902(?:[);/ ]|$)'
       model: 'Y17'
-    - regex: 'vivo 1906(?:[);/ ]|$)'
+    - regex: 'vivo 1906(?:_20)?(?:[);/ ]|$)'
       model: 'Y11'
     - regex: 'vivo 19(?:04|40)(?:[);/ ]|$)'
       model: 'Y12'
+    - regex: 'vivo 2007(?:[);/ ]|$)'
+      model: 'Y12i'
     - regex: 'vivo 1901(?:[);/ ]|$)'
       model: 'Y15'
     - regex: 'vivo 1915(?:[);/ ]|$)'
       model: 'Y19'
     - regex: 'V202[79](?:[);/ ]|$)'
       model: 'Y20'
+    - regex: 'vivo 1613(?:[);/ ]|$)'
+      model: 'Y25'
     - regex: 'V2043_21(?:[);/ ]|$)'
       model: 'Y20 (2021)'
     - regex: 'V2037(?:[);/ ]|$)'
@@ -3434,6 +3457,8 @@ Vivo:
       model: 'Y50'
     - regex: 'V203[05](?:[);/ ]|$)'
       model: 'Y51'
+    - regex: 'vivo 1707(?:[);/ ]|$)'
+      model: 'Y51 (2015)'
     - regex: 'V2031(?:[);/ ]|$)'
       model: 'Y51s'
     - regex: 'V2054A(?:[);/ ]|$)'
@@ -3444,7 +3469,7 @@ Vivo:
       model: 'Y53i'
     - regex: 'vivo 1606a(?:[);/ ]|$)'
       model: 'Y53'
-    - regex: '(?:V2058|V2111A)(?:[);/ ]|$)'
+    - regex: '(?:V2058|V2111A|V2123A)(?:[);/ ]|$)'
       model: 'Y53s'
     - regex: 'vivo 1603(?:[);/ ]|$)'
       model: 'Y55l'
@@ -3452,7 +3477,7 @@ Vivo:
       model: 'Y55s'
     - regex: 'vivo 1719(?:[);/ ]|$)'
       model: 'Y65'
-    - regex: 'vivo 1714(?:[);/ ]|$)'
+    - regex: 'vivo (?:1714|Y69A?)(?:[);/ ]|$)'
       model: 'Y69'
     - regex: 'V2002A(?:[);/ ]|$)'
       model: 'Y70s'
@@ -3460,7 +3485,7 @@ Vivo:
       model: 'Y60s'
     - regex: 'vivo (?:1724|Y71A?)(?:[);/ ]|$)'
       model: 'Y71'
-    - regex: 'vivo 1801(?:[);/ ]|$)'
+    - regex: 'vivo 1801i?(?:[);/ ]|$)'
       model: 'Y71i'
     - regex: 'V1731CA(?:[);/ ]|$)'
       model: 'Y73'
@@ -3470,20 +3495,22 @@ Vivo:
       model: 'Y7s'
     - regex: 'vivo 180([38]|8i)(?:[);/ ]|$)'
       model: 'Y81'
-    - regex: 'vivo 1812(?:[);/ ]|$)'
+    - regex: 'vivo 1812(?:_19)?(?:[);/ ]|$)'
       model: 'Y81i'
     - regex: 'V1732[AT](?:[);/ ]|$)'
       model: 'Y81s'
-    - regex: 'vivo Y83A?(?:[);/ ]|$)'
+    - regex: 'vivo (?:Y83A?|1802)(?:[);/ ]|$)'
       model: 'Y83'
     - regex: 'vivo 1726(?:[);/ ]|$)'
       model: 'Y83 Pro'
     - regex: 'V1730EA(?:[);/ ]|$)'
       model: 'Y89'
-    - regex: 'vivo 1823(?:[);/ ]|$)'
+    - regex: 'vivo (?:1823|1908)(?:_19)?(?:[);/ ]|$)'
       model: 'Y90'
     - regex: 'vivo 181[17](?:[);/ ]|$)'
       model: 'Y91'
+    - regex: 'vivo 1820(?:_19)?(?:[);/ ]|$)'
+      model: 'Y91i'
     - regex: 'V1945A(?:[);/ ]|$)'
       model: 'Y9s'
     - regex: '(?:V2026|V2033)(?:[);/ ]|$)'
@@ -3522,9 +3549,24 @@ Vivo:
       model: 'Z6'
     - regex: 'vivo Y75s(?:[);/ ]|$)'
       model: 'Y75s'
-    - regex: 'vivo Y85A?(?:[);/ ]|$)'
-      model: 'Y85'
-
+    - regex: 'vivo X710L?(?:[);/ ]|$)'
+      model: 'X Shot'
+    - regex: 'X6SPlus(?: [AD])?(?:[);/ ]|$)'
+      model: 'X6S Plus'
+    - regex: 'vivo X6S(?: A)?(?:[);/ ]|$)'
+      model: 'X6S'
+    - regex: 'vivo X([5679]|20)[ALD]?(?:[);/ ]|$)'
+      model: 'X$1'
+    - regex: 'vivo X5Pro(?: L)?(?:[);/ ]|$)'
+      model: 'X5 Pro'
+    - regex: 'vivo Y66i(?: A)?(?:[);/ ]|$)'
+      model: 'Y66i'
+    - regex: 'vivo Y(\d{2})[AL]?(?:[);/ ]|$)'
+      model: 'Y$1'
+    - regex: 'vivo Xplay(\d)S(?:[);/ ]|$)'
+      model: 'X Play $1S'
+    - regex: 'vivo Xplay(\d)[AL]?(?:[);/ ]|$)'
+      model: 'X Play $1'
     - regex: '(?:VIV-|BBG-)?vivo[ _]([^/;]+) Build'
       model: '$1'
     - regex: '(?:VIV-|BBG-)?vivo[ _]([^);/]+)(?:[);/]|$)'
@@ -4075,6 +4117,9 @@ bq:
       device: 'tablet'
     - regex: 'BQ(?:ru)?-1024L(?:[);/ ]|$)'
       model: 'Exion Pro'
+      device: 'tablet'
+    - regex: 'BQ(?:ru)?-7055L(?:[);/ ]|$)'
+      model: 'Exion One'
       device: 'tablet'
     - regex: 'BQ(?:ru)?-7055L(?:[);/ ]|$)'
       model: 'Exion One'
@@ -6615,7 +6660,7 @@ Ginzzu:
 
 # Gionee
 Gionee:
-  regex: '(?:GIO-)?GIONEE[ _-]?[a-z0-9]+|(?:Dream_D1|V188S?|GN[0-9]{3,4}[a-z]?)(?:[);/ ]|$)|F103(?: Pro)?(?: Build|\))|P5 mini Build|P7 Max Build|(M7 Power|F106L|F100A|F103S|F103 Pro|M6 mirror)(?:[);/ ]|$)'
+  regex: '(?:GIO-)?GIONEE[ _-]?[a-z0-9]+|(?:Dream_D1|V188S?|GN[0-9]{3,4}[a-z]?)(?:[);/ ]|$)|F103(?: Pro)?(?: Build|\))|P5 mini Build|P7 Max Build|(M7 Power|F106L|F100A|F103S|F103 Pro|M6 mirror|20190620G)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'GN810(?:[);/ ]|$)'
@@ -6627,6 +6672,8 @@ Gionee:
       model: '$1'
     - regex: 'M7 Power(?:[);/ ]|$)'
       model: 'M7 Power'
+    - regex: '20190620G(?:[);/ ]|$)'
+      model: 'M11'
     - regex: 'P5 mini Build'
       model: 'P5 mini'
     - regex: 'P7 Max Build'
@@ -6989,7 +7036,7 @@ Hasee:
 
 # Hisense ()
 Hisense:
-  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HISENSE; |HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|E270BSA|HWCD100E|HITV300C|M470BS[AE]|EG98|E2281|EG680|I46D1G|HAT4KDTV|HLTE([237]00T|200M|203T|202N|21[023567]T|22[67]T|22[13]E|230E|310[TM]|31[16]T|500T|501N|510[TM]|7[23]0T)'
+  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HISENSE; |HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|HNR55[01]T|E270BSA|HWCD100E|HITV300C|M470BS[AE]|EG98|E2281|EG680|I46D1G|HAT4KDTV|HLTE([237]00T|200M|203T|202N|21[023567][TM]|22[67]T|22[13]E|230E|310[TM]|31[16]T|500T|501N|510[TM]|7[23]0T)'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -7032,7 +7079,7 @@ Hisense:
       model: 'King Kong 4'
     - regex: 'HLTE311T(?:[);/ ]|$)'
       model: 'King Kong 4 Pro'
-    - regex: 'HLTE216T(?:[);/ ]|$)'
+    - regex: 'HLTE216[TM](?:[);/ ]|$)'
       model: 'King Kong 5'
     - regex: 'HLTE316T(?:[);/ ]|$)'
       model: 'King Kong 5 Pro'
@@ -7042,6 +7089,10 @@ Hisense:
       model: 'F30S'
     - regex: 'HLTE227T(?:[);/ ]|$)'
       model: 'F40'
+    - regex: 'HNR550T(?:[);/ ]|$)'
+      model: 'F50'
+    - regex: 'HNR551T(?:[);/ ]|$)'
+      model: 'F50 Plus'
     - regex: 'HLTE310[TM](?:[);/ ]|$)'
       model: 'H18'
     - regex: 'HLTE510[TM](?:[);/ ]|$)'
@@ -7154,7 +7205,7 @@ Minix:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei(?!Browser)|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANA|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|FRL|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JEF|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PPA|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))(?:[);/ ]|$))|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|YOK-AN00|NIC-LX1A|MRX-(AL09|W09)|CDY-(?:[AT]N00|AN[29][05]|NX9[AB]|TN90)|GLK-(?:[AT]L00|LX1U)|JER-(?:AN20|[AT]N10)|ELS-(?:[AT]N[10]0|NX9|N39|N04)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL[02]0|LX9N)|NTS-AL00|ART-(?:[AT]L00[xm]|L29N?|L28)|MED-(?:[AT]L00|LX9N?)|EBG-(?:AN[01]0|TN00)|ANA-(?:[AT]N00|NX9)|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-[AT]N(?:00a?|10)|KKG-AN00|MXW-[AT]N00|JKM-AL00[ab]|TAH-(?:N29|AN00)m|C8817D|T1-821W|d-01[JK]|d-02[HK]|KRJ-W09|HWT31|Y320-U10|Y541-U02|VAT-L19|70[14]HW|60[58]HW|NOH-(?:NX9|AN00)|TNNH-AN00|LIO-(?:[TA]L00|[LN]29|AN00)|KOB2-[LW]09|AGS3-(?:[WL]09|AL0[09]|W00[DE])|DNN-LX9|NEY-NX9|LON-AL00|HLK-L41|503HW|AGR-[LW]09|PPA-LX[12]|ANG-(?:AN00|LX1)|NOP-AN00|ALA-AN70|DVC-[AT]N20|302HW|Nexus 6P|DBY-W09|WKG-LX9|JSC-AN00|OCE-AN10|NZA-AL00|BRQ-A[LN]00|BZC-(?:AL|W)00'
+  regex: '(HW-)?(?:Huawei(?!Browser)|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANA|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|FRL|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JEF|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PPA|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))(?:[);/ ]|$))|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|YOK-AN00|NIC-LX1A|MRX-(AL09|W09)|CDY-(?:[AT]N00|AN[29][05]|NX9[AB]|TN90)|GLK-(?:[AT]L00|LX1U)|JER-(?:AN20|[AT]N10)|ELS-(?:[AT]N[10]0|NX9|N39|N04)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL[02]0|LX9N)|NTS-AL00|ART-(?:[AT]L00[xm]|L29N?|L28)|MED-(?:[AT]L00|LX9N?)|EBG-(?:AN[01]0|TN00)|ANA-(?:[AT]N00|NX9)|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-[AT]N(?:00a?|10)|KKG-AN00|MXW-[AT]N00|JKM-AL00[ab]|TAH-(?:N29|AN00)m|C8817D|T1-821W|d-01[JK]|d-02[HK]|KRJ-W09|HWT31|Y320-U10|Y541-U02|VAT-L19|70[14]HW|60[58]HW|NOH-(?:NX9|AN0[01])|TNNH-AN00|LIO-(?:[TA]L00|[LN]29|AN00)|KOB2-[LW]09|AGS3-(?:[WL]09|AL0[09]|W00[DE])|DNN-LX9|NEY-NX9|LON-AL00|HLK-L41|503HW|AGR-[LW]09|PPA-LX[12]|ANG-(?:AN00|LX1)|NOP-AN00|ALA-AN70|DVC-[AT]N20|302HW|Nexus 6P|DBY-W09|WKG-LX9|JSC-AN00|OCE-AN10|NZA-AL00|BRQ-A[LN]00|BZC-(?:AL|W)00'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a(?:[);/ ]|$)'
@@ -7479,7 +7530,7 @@ Huawei:
       model: 'Mate 30 Pro'
     - regex: 'LIO-N29(?:[);/ ]|$)'
       model: 'Mate 30 Pro 5G'
-    - regex: 'NOH-(?:NX9|AN00)(?:[);/ ]|$)'
+    - regex: 'NOH-(?:NX9|AN0[01])(?:[);/ ]|$)'
       model: 'Mate 40 Pro'
     - regex: 'NOP-AN00(?:[);/ ]|$)'
       model: 'Mate 40 Pro+'
@@ -7734,6 +7785,9 @@ Huawei:
       device: 'tablet'
     - regex: 'BAH3-W59(?:[);/ ]|$)'
       model: 'MatePad 10.4" WiFi'
+      device: 'tablet'
+    - regex: 'BAH3-AN10(?:[);/ ]|$)'
+      model: 'MatePad 10.4" 5G'
       device: 'tablet'
     - regex: 'BAH3-AN10(?:[);/ ]|$)'
       model: 'MatePad 10.4" 5G'
@@ -12206,7 +12260,7 @@ Navon:
 
 # NOA or NOA Mobile (noa-mobile.eu)
 NOA:
-  regex: '(?:NOA-)?NOA[ _]|Hummer(?:_2019_R|LE)|NextSE'
+  regex: '(?:NOA-)?NOA[ _]|Hummer(?:_2019_R|LE)|NextSE|Vivo 4G_r'
   device: 'smartphone'
   models:
     - regex: 'NOA[_ ]CORE[_ ]FORTE'
@@ -12237,6 +12291,8 @@ NOA:
       model: 'H44SE'
     - regex: 'NOA[_ ]H10LE'
       model: 'H10LE'
+    - regex: '(?:NOA[_ ])?Vivo 4G_r'
+      model: 'Vivo 4G'
     - regex: 'NOA[_ ]([^;)/ ]+)'
       model: '$1'
 
@@ -12952,7 +13008,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|42|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[156]|6[13]|7[036]|8[059]|9[345])|220[0125]|18(0[13579]|11|3[13]|2[157]|[45]1|53|45)|32(?:01|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|15|9[15]|6[16]|71)|3350|336[36])|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|42|[0357]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[156]|6[13]|7[036]|8[059]|9[345])|220[0125]|18(0[13579]|11|3[13]|2[157]|[45]1|53|45)|32(?:01|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|15|9[15]|6[16]|71)|3350|336[36])|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -13069,6 +13125,8 @@ Realme:
       model: 'U1'
     - regex: 'RMX(?:20(?:51|[2]5)|2144)(?:[);/ ]|$)'
       model: 'X50 5G'
+    - regex: 'RMX2052(?:[);/ ]|$)'
+      model: 'X50t 5G'
     - regex: 'RMX2071(?:[);/ ]|$)'
       model: 'X50 Pro'
     - regex: 'RMX207[56](?:[);/ ]|$)'
@@ -14943,7 +15001,7 @@ Samsung:
       model: 'Galaxy A30s'
     - regex: '(?:SAMSUNG-)?SM-A315[FGN](?:[);/ ]|$)'
       model: 'Galaxy A31'
-    - regex: '(?:SAMSUNG-)?SM-A325F(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-A325'
       model: 'Galaxy A32'
     - regex: '(?:SAMSUNG-)?(?:SM-A326(?:BR|B)|SCG08)'
       model: 'Galaxy A32 5G'
