feat(os) detect new os: Java ME

--- a/Tests/fixtures/smartphone-13.yml
+++ b/Tests/fixtures/smartphone-13.yml
@@ -6096,7 +6096,10 @@
   browser_family: Unknown
 - 
   user_agent: SAMSUNG-GT-C3262 Opera/9.80 (J2ME/MIDP; Opera Mini/7.0.30281/34.1000; U; en) Presto/2.8.119 Version/11.10
-  os: [ ]
+  os:
+    name: Java ME
+    version: ""
+    platform: ""
   client:
     type: browser
     name: Opera Mini
@@ -6104,10 +6107,10 @@
     engine: Presto
     engine_version: "2.8.119"
   device:
-    type: smartphone
+    type: feature phone
     brand: Samsung
     model: GT-C3262
-  os_family: Unknown
+  os_family: Real-time OS
   browser_family: Opera
 - 
   user_agent: SAMSUNG-GT-C3303K/C3303KJPJI2 NetFront/3.5 Profile/MIDP-2.0 Configuration/CLDC-1.1
