--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -1171,7 +1171,6 @@
   name: 'Xbox'
   version: '360'
 
-
 ##########
 # Mobile Gaming Console
 ##########
@@ -1182,7 +1181,6 @@
 - regex: 'PlayStation ((?:Portable|Vita))'
   name: 'PlayStation Portable'
   version: '$1'
-
 
 ##########
 # IBM
@@ -1196,4 +1194,11 @@
 ###########
 - regex: 'Linux(?:OS)?[^a-z]|Cinnamon/(?:\d+[\.\d]+)'
   name: 'GNU/Linux'
+  version: ''
+
+##########
+# Java ME (Java Platform, Micro Edition)
+##########
+- regex: 'Java ME|(J2ME|Profile)/MIDP|Configuration/CLDC'
+  name: 'Java ME'
   version: ''
