--- a/Tests/fixtures/smartphone-11.yml
+++ b/Tests/fixtures/smartphone-11.yml
@@ -2253,7 +2253,10 @@
   browser_family: Unknown
 - 
   user_agent: COCOON/R01 Browser/Obigo/Q05A Profile/MIDP-2.0 Configuration/CLDC-1.1
-  os: [ ]
+  os:
+    name: Java ME
+    version: ""
+    platform: ""
   client:
     type: browser
     name: Obigo
@@ -2264,7 +2267,7 @@
     type: smartphone
     brand: O2
     model: COCOON
-  os_family: Unknown
+  os_family: Real-time OS
   browser_family: Unknown
 - 
   user_agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows CE; IEMobile 7.6) o2 Xda comet
