--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -6239,7 +6239,10 @@
   browser_family: Android Browser
 - 
   user_agent: CELKON.C64/R2AE SEMC-Browser/4.0.3 Profile/MIDP-2.0 Configuration/CLDC-1.1
-  os: [ ]
+  os:
+    name: Java ME
+    version: ""
+    platform: ""
   client:
     type: browser
     name: SEMC-Browser
@@ -6250,7 +6253,7 @@
     type: smartphone
     brand: Celkon
     model: C64
-  os_family: Unknown
+  os_family: Real-time OS
   browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Linux; U; Android 4.2.2; en-us; Cherry Mobile Amber W380 Build/JDQ39) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30
