--- a/Tests/fixtures/unknown.yml
+++ b/Tests/fixtures/unknown.yml
@@ -155,7 +155,10 @@
   browser_family: Unknown
 -
   user_agent: Opera/9.80 (J2ME/MIDP; Opera Mini/5.0.22371/28.3782; U; en) Presto/2.8.119 Version/11.10
-  os: [ ]
+  os:
+    name: Java ME
+    version: ""
+    platform: ""
   client:
     type: browser
     name: Opera Mini
@@ -163,10 +166,10 @@
     engine: Presto
     engine_version: "2.8.119"
   device:
-    type: ""
+    type: feature phone
     brand: ""
     model: ""
-  os_family: Unknown
+  os_family: Real-time OS
   browser_family: Opera
 -
   user_agent: The Bat! 4.0.0.22
