feat(os) added detect new os: REX feat(tests) update tests

--- a/Tests/fixtures/smartphone-6.yml
+++ b/Tests/fixtures/smartphone-6.yml
@@ -105,7 +105,10 @@
   browser_family: Unknown
 - 
   user_agent: Huawei/1.0/HUAWEI_G6310/Obigo Browser/Q03C Browser/Q03C MMS/1.0/MIDP-2.0 Configuration/CLDC-1.1
-  os: [ ]
+  os:
+    name: Java ME
+    version: ""
+    platform: ""
   client:
     type: browser
     name: Obigo
@@ -116,7 +119,7 @@
     type: smartphone
     brand: Huawei
     model: G6310
-  os_family: Unknown
+  os_family: Real-time OS
   browser_family: Unknown
 - 
   user_agent: 'Huawei/1.0/HUAWEI-G6609   Browser/Opera MMS/1.0 Profile/MIDP-2.0 Configuration/CLDC-1.1 Opera/9.80 (MTK; Nucleus; Opera Mobi/4000; U; fr-FR) Presto/2.5.28 Version/10.10'
