--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -1077,6 +1077,13 @@
   version: '$1'
 
 ##########
+# REX
+##########
+- regex: 'REX; U;'
+  name: 'REX'
+  version: ''
+
+##########
 # Brew
 ##########
 - regex: '(?:Brew(?!-Applet)(?: MP)?|BMP)(?:[ /](\d+[\.\d]+))?'
@@ -1199,6 +1206,6 @@
 ##########
 # Java ME (Java Platform, Micro Edition)
 ##########
-- regex: 'Java ME|(J2ME|Profile)/MIDP|Configuration/CLDC'
+- regex: 'Java ME|(J2ME|Profile)/MIDP|MIDP-(?:\d+[\.\d]+)/CLDC|Configuration/CLDC|Java; U; MIDP|MMP/\d.\d'
   name: 'Java ME'
   version: ''
