--- a/Tests/fixtures/smartphone-11.yml
+++ b/Tests/fixtures/smartphone-11.yml
@@ -5000,7 +5000,10 @@
   browser_family: Android Browser
 - 
   user_agent: PANTECH-P7000/JDUS10052009; Mozilla/5.0 (Profile/MIDP-2.0 Configuration/CLDC-1.1; Opera Mini/att/4.2.15645; U; fr) Opera 9.50
-  os: [ ]
+  os:
+    name: Java ME
+    version: ""
+    platform: ""
   client:
     type: browser
     name: Opera Mini
@@ -5011,7 +5014,7 @@
     type: smartphone
     brand: Pantech
     model: P7000
-  os_family: Unknown
+  os_family: Real-time OS
   browser_family: Opera
 - 
   user_agent: Mozilla/5.0 (Linux; U; Android 2.2.1; fr-fr; PantechP8000 Build/FRG83) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 UCBrowser/9.5.0.360 U3/0.8.0 Mobile Safari/533.1
@@ -5051,7 +5054,10 @@
   browser_family: Android Browser
 - 
   user_agent: PantechP9020/JEUS04262010; Mozilla/5.0 (Profile/MIDP-2.0 Configuration/CLDC-1.1; Opera Mini/att/4.2.18216; U; fr) Opera 9.50
-  os: [ ]
+  os:
+    name: Java ME
+    version: ""
+    platform: ""
   client:
     type: browser
     name: Opera Mini
@@ -5062,7 +5068,7 @@
     type: smartphone
     brand: Pantech
     model: P9020
-  os_family: Unknown
+  os_family: Real-time OS
   browser_family: Opera
 - 
   user_agent: Mozilla/5.0 (Linux; U; Android 2.3.4; en-us; PantechP9060 Build/GINGERBREAD) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1
