--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -2009,7 +2009,10 @@
   browser_family: Android Browser
 - 
   user_agent: ZTE-G-X991-Rio-orange/X991_V1_Z2_FRES_D18F109 Profile/MIDP-2.0 Configuration/CLDC-1.1 Obigo/Q03C
-  os: [ ]
+  os:
+    name: Java ME
+    version: ""
+    platform: ""
   client:
     type: browser
     name: Obigo
@@ -2020,7 +2023,7 @@
     type: smartphone
     brand: ZTE
     model: Rio
-  os_family: Unknown
+  os_family: Real-time OS
   browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Linux; Android 10; dandelion Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/81.0.4044.138 Mobile Safari/537.36
