--- a/Tests/fixtures/unknown.yml
+++ b/Tests/fixtures/unknown.yml
@@ -125,7 +125,10 @@
   browser_family: Unknown
 -
   user_agent: pcdc751/1.0 UP.Browser/6.2.3.2 (GUI) MMP/2.0
-  os: [ ]
+  os:
+    name: Java ME
+    version: ""
+    platform: ""
   client:
     type: browser
     name: Openwave Mobile Browser
@@ -133,14 +136,17 @@
     engine: ""
     engine_version: ""
   device:
-    type: ""
+    type: feature phone
     brand: ""
     model: ""
-  os_family: Unknown
+  os_family: Real-time OS
   browser_family: Unknown
 -
   user_agent: 'r355[TF268435460205582333000000014065648021] UP.Browser/6.2.3.8 (GUI) MMP/2.0'
-  os: [ ]
+  os:
+    name: Java ME
+    version: ""
+    platform: ""
   client:
     type: browser
     name: Openwave Mobile Browser
@@ -148,10 +154,10 @@
     engine: ""
     engine_version: ""
   device:
-    type: ""
+    type: feature phone
     brand: ""
     model: ""
-  os_family: Unknown
+  os_family: Real-time OS
   browser_family: Unknown
 -
   user_agent: Opera/9.80 (J2ME/MIDP; Opera Mini/5.0.22371/28.3782; U; en) Presto/2.8.119 Version/11.10
@@ -230,7 +236,7 @@
     engine: Presto
     engine_version: "2.8.119"
   device:
-    type: ""
+    type: "smartphone"
     brand: ""
     model: ""
   os_family: Android
