--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -2232,7 +2232,7 @@
     default: 'WebKit'
 
 # Dorado
-- regex: 'Dorado WAP-Browser[/ ](\d+[\.\d]+)'
+- regex: 'Dorado WAP-Browser(?:[/ ](\d+[\.\d]+))?'
   name: 'Dorado'
   version: '$1'
 
