--- a/Tests/fixtures/unknown.yml
+++ b/Tests/fixtures/unknown.yml
@@ -236,7 +236,7 @@
     engine: Presto
     engine_version: "2.8.119"
   device:
-    type: "smartphone"
+    type: ""
     brand: ""
     model: ""
   os_family: Android
