feat(device) detect brand Zopo models: Color F2, F5 Color M5 feat(device) detect brand F2 Mobile model: F80 Piabella

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18729,7 +18729,7 @@ POCO:
 
 # Zopo
 Zopo:
-  regex: 'ZOPO|(?:ZOPO[_ ])?(Flash X3|ZP[0-9]{2,}[^/;]+)(?:\)| Build)'
+  regex: 'ZOPO|(?:ZOPO[_ ])?(Flash X3|F2_Color5_5|F5_Color_M5|ZP[0-9]{2,}[^/;]+)(?:\)| Build)'
   device: 'smartphone'
   models:
     - regex: '(?:ZOPO_C2_MOD|ZP998)(?:[);/ ]|$)'
@@ -18758,6 +18758,10 @@ Zopo:
       model: 'Color C'
     - regex: 'ZP370(?:[);/ ]|$)'
       model: 'Color S'
+    - regex: 'F2_Color5_5(?:[);/ ]|$)'
+      model: 'Color F2'
+    - regex: 'F5_Color_M5(?:[);/ ]|$)'
+      model: 'F5 Color M5'
     - regex: 'ZP5(63|86)(?:[);/ ]|$)'
       model: 'Color X'
     - regex: 'ZP567(?:[);/ ]|$)'
@@ -24597,7 +24601,7 @@ YUHO:
 
 # F2 Mobile OR 2F Mobile (f2mexico.com)
 F2 Mobile:
-  regex: '(?:Z8PLUS|Z8POCKET|LT5216|F80s_plus|C8Finger)(?:[);/ ]|$)'
+  regex: '(?:Z8PLUS|Z8POCKET|LT5216|F80s_plus|C8Finger|F80 PIABELLA)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Z8PLUS'
@@ -24606,6 +24610,8 @@ F2 Mobile:
       model: 'Z8 Pocket'
     - regex: 'F80s_plus'
       model: 'F80s Plus'
+    - regex: 'F80 PIABELLA'
+      model: 'F80 Piabella'
     - regex: '(LT5216)'
       model: '$1'
     - regex: 'C8Finger'
