--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -3796,3 +3796,21 @@
     model: MediaPad M5 Lite
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; Co-Mate) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.99 Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 80.0.3987.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: iBall
+    model: Co-Mate
+  os_family: Android
+  browser_family: Chrome
