--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17084,7 +17084,7 @@ Tecno Mobile:
       model: 'Spark 3'
     - regex: 'Tecno[ _]KB8?(?:[);/ ]|$)'
       model: 'Spark 3 Pro'
-    - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
+    - regex: 'Tecno[ _](?:KC8S?|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]KC6S?(?:[);/ ]|$)'
       model: 'Spark 4 Air'
