feat(device) detect brand Micromax models: Canvas Magnus HD (Q421),  Bharat 2 Plus (Q402Plus), Bolt (Q357), Bharat 5, Canvas 1 (2018) (C1A),  Canvas 2 Plus (C2APLS)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1119,6 +1119,10 @@ MicroMax:
       model: 'YU Yureka S YU5530'
     - regex: 'Q424'
       model: 'Bolt Selfie'
+    - regex: 'Q402 ?Plus'
+      model: 'Bharat 2 Plus'
+    - regex: 'Q357'
+      model: 'Bolt'
     - regex: 'Q426'
       model: 'Canvas Mega 2'
     - regex: 'N8216'
@@ -1133,6 +1137,14 @@ MicroMax:
       model: 'Spark 4G Prime'
     - regex: 'Q4601(?:[);/ ]|$)'
       model: 'Selfie 2 Note'
+    - regex: 'Q421(?:[);/ ]|$)'
+      model: 'Canvas Magnus HD'
+    - regex: 'Micromax C1A(?:[);/ ]|$)'
+      model: 'Canvas 1 (2018)'
+    - regex: 'C2APLS(?:[);/ ]|$)'
+      model: 'Canvas 2 Plus'
+    - regex: 'Bharat (\d)(?:[);/ ]|$)'
+      model: 'Bharat $1'
 
     - regex: 'MicroMax(?:[ \-\_])?(X291|X246|X252|X458|X312)'
       model: '$1'
