feat(device) detect brand HTC model: Desire 10 Life Style feat(device) detect brand Coolpad models: Cool 1 (C106, C106-8) feat(device) detect brand MicroMax models: Canvas Juice 4 (Q465),  Canvas 5 Lite (Q462), Canvas Pulse (E451)
feat(device) added tests for brand HTC models: Desire 530, Desire 630 Dual SIM
feat(device) added test for brand Coolpad model: 5370

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -209,6 +209,8 @@ HTC:
       model: '10 Evo'
     - regex: 'HTC Desire (.+) pro(?:[);/ ]|$)'
       model: 'Desire $1 Pro'
+    - regex: 'Desire 10 lifestyle(?:[);/ ]|$)'
+      model: 'Desire 10 Life Style'
 
     - regex: 'NexusHD2' # custom rom for hd2
       model: 'HD2'
@@ -1100,15 +1102,21 @@ MicroMax:
       model: 'Canvas Power'
     - regex: 'AQ5001'
       model: 'Canvas Juice 2'
+    - regex: 'Q465(?:[);/ ]|$)'
+      model: 'Canvas Juice 4'
+    - regex: 'E451(?:[);/ ]|$)'
+      model: 'Canvas Pulse'
     - regex: '4560MMX(?:[);/ ]|$)'
       model: '4560MMX'
-    - regex: 'E481'
+    - regex: 'E481(?:[);/ ]|$)'
       model: 'Canvas 5'
+    - regex: 'Q462(?:[);/ ]|$)'
+      model: 'Canvas 5 Lite'
     - regex: 'P70221(?:[);/ ]|$)'
       model: 'Canvas Tab'
       device: 'tablet'
-    - regex: 'Q327'
-      model: 'Bolt'
+    - regex: 'Q(3[25]7)(?:[);/ ]|$)'
+      model: 'Bolt Q$1'
     - regex: 'Q417'
       model: 'Canvas Mega'
     - regex: 'Q402\+'
@@ -1121,8 +1129,6 @@ MicroMax:
       model: 'Bolt Selfie'
     - regex: 'Q402 ?Plus'
       model: 'Bharat 2 Plus'
-    - regex: 'Q357'
-      model: 'Bolt'
     - regex: 'Q426'
       model: 'Canvas Mega 2'
     - regex: 'N8216'
@@ -1139,6 +1145,8 @@ MicroMax:
       model: 'Selfie 2 Note'
     - regex: 'Q421(?:[);/ ]|$)'
       model: 'Canvas Magnus HD'
+    - regex: 'E313(?:[);/ ]|$)'
+      model: 'Canvas Xpress 2'
     - regex: 'Micromax C1A(?:[);/ ]|$)'
       model: 'Canvas 1 (2018)'
     - regex: 'C2APLS(?:[);/ ]|$)'
@@ -4631,7 +4639,7 @@ Condor:
 
 # Coolpad (coolpad.us)
 Coolpad:
-  regex: '(?:YL-)?Coolpad|(?:Cool_9S|1824-S0|8190Q|1831-A0|8676-[AM]01|CP8298_I00|CP3648AT?|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-(?:8|E0)|C106-[79]|C107-9| C106|MTS-T0|cp3705A[S]?|ORL-C0|DLS-E0|1826-I01|8298-(?:M02|A01)|5560S|CP3706AS|CP3669AS|C103)(?:[);/ ]|$)|(8295|5860S) Build'
+  regex: '(?:YL-)?Coolpad|(?:Cool_9S|1824-S0|8190Q|1831-A0|8676-[AM]01|CP8298_I00|CP3648AT?|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-(?:8|E0)|C106-[789]|C107-9| C106|MTS-T0|cp3705A[S]?|ORL-C0|DLS-E0|1826-I01|8298-(?:M02|A01)|5560S|CP3706AS|CP3669AS|C103)(?:[);/ ]|$)|(8295|5860S) Build'
   device: 'smartphone'
   models:
     - regex: 'VCR-[AI]0'
@@ -4657,7 +4665,7 @@ Coolpad:
       model: 'Suva'
     - regex: 'MTS-T0(?:[);/ ]|$)'
       model: 'N2M'
-    - regex: '(?:C106-[79]|R116|C103)(?:[);/ ]|$)'
+    - regex: '(?:C106-[789]|R116|C10[36])(?:[);/ ]|$)'
       model: 'Cool 1'
     - regex: 'C107-9(?:[);/ ]|$)'
       model: '1C'
