--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -3832,22 +3832,24 @@
     model: Grace 3101 4G
   os_family: Android
   browser_family: Chrome
-- os:
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 7.0; PMT3101_4G Build/NRD90M)
+  os:
     name: Android
     version: "7.0"
     platform: ""
   client:
     type: browser
-    name: Chrome
-    version: 88.0.4324.93
-    engine: Blink
+    name: Android Browser
+    version: ""
+    engine: WebKit
     engine_version: ""
   device:
     type: tablet
     brand: Prestigio
     model: Grace 3101 4G
   os_family: Android
-  browser_family: Chrome
+  browser_family: Android Browser
 -
   user_agent: Mozilla/5.0 (Linux; Android 7.0; PMT3101_4GH) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 Safari/537.36
   os:
